@@ -33,6 +33,7 @@ Specifically, the GPL parts of FFmpeg are
     - vf_geq.c
     - vf_hqdn3d.c
     - vf_hue.c
+    - vf_kerndeint.c
     - vf_mp.c
     - vf_pp.c
     - vf_smartblur.c
